@@ -1,5 +1,4 @@
 FROM eclipse-temurin:17-jdk-alpine
-VOLUME /tmp
 
 # the executable spring boot app
 ARG JAR_FILE=target/kalah-0.0.1-SNAPSHOT.jar
@@ -9,4 +8,4 @@ ADD ${JAR_FILE} app.jar
 ARG SPRING_PROFILES=default
 ENV SPRING_PROFILES_ACTIVE=${SPRING_PROFILES}
 
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
+ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom","--enable-preview", "-jar","/app.jar"]
